Again with fixing the tiny gap problem

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
     position: absolute;
     display: block;
     top: 0;
-    height: 2.6ex;
+    height: 2.8ex;
     width: 1px;
     background-color: rgba(128, 128, 128, 0.5);
 }
